# cryptosnoop

./: CryptoState.h  InstructionOperandHandler.h  README.md
native version/header/: ShadowRegister.h
native version/src/: CryptoState.c  InstructionOperandHandler.c  ShadowRegister.c  insdb.c
valgrind version/valgrind-3.14.0/: Makefile  Makefile.am  Makefile.in  cachegrind.out.9702  cachegrind.out.9703  cachegrind.out.9704  cachegrind.out.9705  callgrind.out.17470.debug.nonevp.cbc  callgrind.out.2553.debug.ecb  callgrind.out.2781  callgrind.out.2784  callgrind.out.2876  callgrind.out.6882  callgrind.out.ssl.9831  config.h  config.status  configure  configure.ac  default.supp  glibc-2.X.supp  scriptToBuild.sh  shaout  testfile  valgrind.pc
valgrind version/valgrind-3.14.0/.in_place/: CryptoSnooper-x86-linux
valgrind version/valgrind-3.14.0/CryptoSnooper/: Makefile  Makefile.am  Makefile.in  cs_main.c  refCode
valgrind version/valgrind-3.14.0/CryptoSnooper/.deps/: CryptoSnooper_x86_linux-cs_main.Po
valgrind version/valgrind-3.14.0/CryptoSnooper/docs/: Makefile  Makefile.in
valgrind version/valgrind-3.14.0/CryptoSnooper/tests/: Makefile  Makefile.in
valgrind version/valgrind-3.14.0/VEX/: Makefile
valgrind version/valgrind-3.14.0/autom4te.cache/: output.0  requests  traces.0
valgrind version/valgrind-3.14.0/auxprogs/: Makefile  getoff-x86-linux  valgrind-di-server  valgrind-listener
valgrind version/valgrind-3.14.0/cachegrind/: Makefile  cg_merge
valgrind version/valgrind-3.14.0/callgrind/: Makefile
valgrind version/valgrind-3.14.0/coregrind/: Makefile  valgrind  vgdb
valgrind version/valgrind-3.14.0/cryptoSnooperTest/: a.out  befsb  cryptoppSha1eg.cpp  gensb  sha1snippet  super block 1  super block 2
valgrind version/valgrind-3.14.0/docs/: Makefile
valgrind version/valgrind-3.14.0/drd/: Makefile
valgrind version/valgrind-3.14.0/exp-bbv/: Makefile
valgrind version/valgrind-3.14.0/exp-dhat/: Makefile
valgrind version/valgrind-3.14.0/exp-sgcheck/: Makefile
valgrind version/valgrind-3.14.0/gdbserver_tests/: Makefile
valgrind version/valgrind-3.14.0/helgrind/: Makefile
valgrind version/valgrind-3.14.0/include/: Makefile
valgrind version/valgrind-3.14.0/lackey/: Makefile
valgrind version/valgrind-3.14.0/massif/: Makefile
valgrind version/valgrind-3.14.0/memcheck/: Makefile
valgrind version/valgrind-3.14.0/mpi/: Makefile
(+247 files in other folders)
